style/style.css
@media (max-width: 576px) {
    nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding-top: 10px;
        padding-bottom: 10px;
        padding-left: 20px;
        padding-right: 20px;
        position: relative;
    }
    .menuBurger {
        display: block;
        position: absolute;
        right: 20px;
        top: 50%;
        width: 30px;
        transform: translateY(-50%);
        height: 20px;
        cursor: pointer;
        transition: 3s ease-in-out;
        
    }
    
    /* J'AI ESSAYE MAIS CA A TOUT CASSE DONC JE PREFERE METTRE EN COMMENTAIRE */
    
     /* @keyframes bounce {
        0%{transform: translateY(0px);}
        50%{transform: translateY(-10px);}
        100%{transform: translateY(-10px);
              transform: rotateX(45deg); 
        }
            
    }
    .menuBurger:hover{
        animation: bounce 1s infinite ease;
    }

    @keyframes glow {
        from {
            box-shadow: 0 0 10px -10px #aef4af;
          }
          to {
            box-shadow: 0 0 10px 10px #aef4af;
          }
        }
    }
   
    .menuBurger{
        animation: glow 1 infinite alternate;
    }  */
    

    .navTitre {
        z-index: 10;
        position: relative;
    }

    .navP {
        
        visibility: hidden; 
        opacity: 0; 
        display: none;
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        background-color:#2c3f50 ;
        text-align: center;
        padding: 10px ;
        z-index: 20;
    }
    .navP p {
        margin: 10px 0;
        color: white;
    }
    .imgAvatar {
        width: 50vw;
        height: auto;
        margin-left: 25vw;
    }

    .section1{
        text-align: center;
        align-items: center;
        margin-left: 0;
    }
    .section1Titre {
        margin-left: 0;
        text-align: center;
        font-size: 2rem;
        align-items: center;
    }

    .section1P {
        margin-left: 0;
        text-align: center;
        align-items: center;
        
    }

    .section2img1, .section2img2 {
        gap: 10px;
        flex-direction: column;
        align-items: center;
        width: 20vw;
        margin-left: 40vw;
        display: flex;
    }
/* INCOMPREHENSIBLE POURQUOI MES IMAGES CHANGENT PAS DE TAILLE */
    .imgIcon {
        width:40vw;
        margin-bottom: 15px;
        margin-left: 0;
        height: auto;
    }

    .section3Column {
        width: 90vw;
        margin-left: 5vw;
        flex-direction: column;
    }

    .section3P {
        flex-direction: column;
    }

    .aboutP1, .aboutP2 {
        width: 100%;
    }

    .aboutP2 {
        margin-left: 0;
        margin-top: 15px;
    }


    .form {
        width: 90vw;
        margin-left: 5vw;
        padding: 10px;
    }

    .footer1 {
        flex-direction: column;
        gap: 2rem;
        padding-top: 20px;
        padding-bottom: 20px;
        padding-left: 10px;
        padding-right: 10px;
    }

    #iGap {
        gap: 10px;
    }
}

@media (min-width: 577px) and (max-width: 768px) {
    nav {
        padding: 20px;
        
    }

    .navTitre {
        width: 2vw;
        
    }
    .menuBurger{
        display: none;
    }
    .navP {
        /* width: 5vw;
        font-size: 15px; */
        display: flex;
    }

    .imgAvatar {
        width: 30vw;
        margin-left: 35vw;
        height: auto;
    }

    .section1{
        text-align: center;
        align-items: center;
    }
    .section1Titre{
        text-align: center;
        align-items: center;
    }
    .section1P{
        align-items: center;
        text-align: center;
    }
    .section2img1, .section2img2 {
        gap: 20px;
        flex-wrap: wrap;
        justify-content: center;
        
    }
    .aboutP2{
        flex-wrap: wrap;
        flex-direction: column
    }

    .imgIcon {
        width: 40vw;
        height: auto;
        margin-bottom: 15px;
    }

    .section3Column {
        width: 70vw;
        margin-left: 15vw;
    }

    .form {
        width: 60vw;
        margin-left: 20vw;
    }
}
@media (min-width:768px) {
    .menuBurger{
        display: none;
    }
}
body {
    margin: 0;
    padding: 0;
    flex-wrap: wrap;
}

nav{
    display: flex;
    background-color: #2c3f50;
    color: white;
    height: 10vh;
    align-items: center;
}
.nav{
    display: flex;
    background-color: #2c3f50;
    color: white;
    height: 10vh;
    align-items: center;
}

.navTitre{
    font-weight: bold;
    margin-left: 20vw;
    font-family: Montserrat;
    font-size: 1.563rem;
}

.navP{
    display: flex;
    gap: 30px;
    margin-left: 35vw;
    font-family: Lato;
    font-weight: bold;
    
}

.section1{
    background-color: #dc3545;
    padding-top: 10vh;
    padding-bottom: 10vh;
    
}

.imgAvatar{
    width: 20vw;
    height: 30vh;
    margin-left: 40vw;
}

.section1Titre{
    color: white;
    margin-left: 42vw;
    font-weight: bold;
    font-family: Montserrat;
    font-size: 2.5rem;
}

.section1P{
    color: white;
    margin-left: 40vw;
    font-family: Lato;
}

.section2Titre{
    display: flex;
    justify-content: center;
    font-family: Montserrat;
    font-size: 1.563rem;
    font-weight: bold;
    
}

.section2{
    padding-top: 8vh;
    padding-bottom: 8vh;
}

.section2img1{
    display: flex;
    justify-content: center;
    gap: 25px;
    flex-wrap: wrap;
}

.section2img2{
    display: flex;
    justify-content: center;
    gap: 25px;
    margin-top: 3.4vh;
    flex-wrap: wrap;
}

.imgIcon{
    width: 15vw;
    height: 20vh;
    border-radius: 10px;
}

.section3{
    background-color: #dc3545 ;
    color: white;
    padding-top: 8vh;
    padding-bottom: 8vh;
}

.section3Titre{
    display: flex;
    justify-content: center;
    font-family: Montserrat;
    font-size: 1.563rem;
}

.section3Column{
    display: flex;
    width: 30vw;
    gap: 10px;
    font-family: Lato;
    font-size: 0.9rem;
    line-height: 1.6;
    margin-left: 35vw;
}
.section3P{
    display: flex;
}
.aboutP2{
    margin-left: 1vw;
}

.section4{
    padding-top: 8vh;
    padding-bottom: 8vh;
}

.form {
    padding: 20px;
    width: 27.2vw;
    text-align: center;
    margin-left: 35vw;
}
h2 {
    font-size: 1.563rem;
    font-weight: bold;
    color: #2c3f50;

}
form {
    display: flex;
    flex-direction: column;
    gap: 15px;
    
}
label {
    text-align: left;
    font-size: 0.875rem;
    color: #6e7983;
}
input, textarea {
    width: 100%;
    padding: 10px;
    border: none;
    border-bottom: 1px solid #ccc;
    font-size: 0.875rem;
    background: transparent;
    outline: none;
}
textarea {
    resize: none;
}
.btn {
    background-color: #d9534f;
    color: white;
    padding: 10px 15px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    width: 100px;
}
.footer2{
    background-color: #1a252f;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    color: white;
    font-family: Lato;
    font-size: 0.7rem;
}
.footer1{
    background-color: #2c3f50;
    color: white;
    margin-bottom: 0;
    display: flex;
    justify-content: center;
    gap: 6rem;
    text-align: center;
    padding-bottom: 6vh;
    padding-top: 4vh;
}

.bootstrap{
    color: #1db695;
}

footer>section>div>div>i{
    border: 2px solid white;
    border-radius: 100%;
    height: 30px;
    width: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 10px;
}

h4{
    font-family: Montserrat;
    font-size: 1.2rem;
}

.footerP{
    font-family: Lato;
    font-size: smaller;
}

#iGap{
    gap: 20px;
    display: flex;
    justify-content: center;
}

